--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <div id="counter">
     <h3>
-        Time left in This Week
+        time left in this week
     </h3>
     
         <h2 class="box" id="days"></h2>
