--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         
         body{
             text-align: center;
-            font-family: 'Fjalla One', sans-serif;
+            font-family: 'Apercu', sans-serif;
             color: #ff8502;
             background-color: #f2c2cc;
         }
         .box{
             display: inline-block;
             display: inline-block;
-            color: #f2c2cc;
+            color: #a1cd04;
             padding: 10px;
             border-radius: 5px;
             min-width: 40px;
