--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         .box{
             display: inline-block;
             display: inline-block;
-            color: #a1cd04;
+            color: #f2c2cc;
             padding: 10px;
             border-radius: 5px;
-            min-width: 40px;
+            min-width: 80px;
         }
         #days{
             background-color:#ff8502;
