--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         .box{
             display: inline-block;
             display: inline-block;
+            font-size: 15px;
             color: #f2c2cc;
             padding: 10px;
             border-radius: 5px;
