--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         .box{
             display: inline-block;
             display: inline-block;
+            font-family: 'Apercu', sans-serif;
             font-size: 18px;
             color: #f2c2cc;
             padding: 3px;
@@ -35,7 +36,7 @@
         }
         h2{
             display: inline-block;
-            margin-right: 1px;
+            margin-right: 10px;
             margin-block-start: 5px;
         }
         h3{
@@ -43,6 +44,7 @@
             
         }
         .small{
+            font-family: 'Apercu', sans-serif;
             font-size: 18px;
             font-weight: lighter;
         }
