--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         body{
             text-align: center;
-            font-family: 'Apercu', sans-serif;
+            font-family: 'Apercu medium italic', sans-serif;
             font-size: 22px;
             color: #ff8502;
             background-color: #f2c2cc;
@@ -18,7 +18,7 @@
         .box{
             display: inline-block;
             display: inline-block;
-            font-family: 'Apercu', sans-serif;
+            font-family: 'Apercu medium italic', sans-serif;
             font-size: 18px;
             color: #f2c2cc;
             padding: 3px;
@@ -44,7 +44,7 @@
             
         }
         .small{
-            font-family: 'Apercu', sans-serif;
+            font-family: 'Apercu medium italic', sans-serif;
             font-size: 18px;
             font-weight: lighter;
         }
