--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             color: #ff8502;
             background-color: #f2c2cc;
         }
+        .card {
+    padding: 10px 25px 10px 25px;
+    border-radius: 10px;
+    background: #f2c2cc;
+    width: 85vw;
+    color: #ff8502;
+    display: inline-block;
+    box-shadow: 4px 4px 2px 0px #a1cd04;
+}
         .box{
             display: inline-block;
             display: inline-block;
