--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Apercu medium italic', sans-serif;
             font-size: 25px;
             color: #ff8502;
-            background-color: #f2c2cc;
+            background-color: #ffff;
         }
         .card {
     padding: 10px 25px 10px 25px;
