--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     border-radius: 20px;
     background: #f2c2cc;
     width: 85vw;
+    height: 20vw;
     color: #ff8502;
     display: inline-block;
     box-shadow: 8px 8px 4px 0px #a1cd04;
