--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             font-size: 25px;
             color: #ff8502;
             background-color: #ffff;
+            line-height: 1.6;
         }
         .card {
     padding: 10px 25px 10px 25px;
     border-radius: 20px;
     background: #f2c2cc;
     width: 85vw;
-    height: 20vw;
     color: #ff8502;
     display: inline-block;
     box-shadow: 8px 8px 4px 0px #a1cd04;
