--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             padding: 3px;
             border-radius: 10px;
             min-width: 40px;
+            line-height: 2.0;
         }
         #days{
             background-color:#ff8502;
