--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             border-radius: 10px;
             min-width: 40px;
             line-height: 0.3;
+            margin-top: 0;
         }
         #days{
             background-color:#ff8502;
