--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         }
         .card {
     padding: 10px 25px 10px 25px;
-    border-radius: 2px;
+    border-radius: 20px;
     background: #f2c2cc;
     width: 85vw;
     color: #ff8502;
     display: inline-block;
     box-shadow: 8px 8px 4px 0px #a1cd04;
-    line-height: 2.0;
+    height: 2.0;
 }
         .box{
             display: inline-block;
@@ -32,9 +32,9 @@
             font-size: 20px;
             color: #f2c2cc;
             padding: 3px;
-            border-radius: 1px;
+            border-radius: 10px;
             min-width: 40px;
-            line-height: 1.0;
+            height: 1.0;
         }
         #days{
             background-color:#ff8502;
