--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     color: #ff8502;
     display: inline-block;
     box-shadow: 8px 8px 4px 0px #a1cd04;
-    height: 2.0;
+    height: 20px;
 }
         .box{
             display: inline-block;
@@ -34,7 +34,7 @@
             padding: 3px;
             border-radius: 10px;
             min-width: 40px;
-            height: 1.5;
+            height: 15px;
         }
         #days{
             background-color:#ff8502;
